[package]
name = "sdk"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "debuginfo"
overflow-checks = true
panic = "abort"

[dependencies]
serde = { version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"
serde_bytes = "0.11.7"
async-trait = "0.1.57"
serde_with = { version= "2.0.0", features = [ "json" ] }
